--- a/makerspace-backend/package.json
+++ b/makerspace-backend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "tsx src/main.ts",
+    "start": "tsx watch src/server.ts",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
