Modified frontend file structure, README, and gitignores

--- a/makerspace-backend/.gitignore
+++ b/makerspace-backend/.gitignore
@@ -22,3 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# TypeScript cache
+*.tsbuildinfo
+
+# dotenv environment variable files
+.env
+.env.*
+!.env.example
