--- a/makerspace-frontend/package.json
+++ b/makerspace-frontend/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.8",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
+    "react-bootstrap-icons": "^1.11.6",
     "react-cookie": "^8.0.1",
     "react-datepicker": "^8.9.0",
     "react-dom": "^19.2.0",
