--- a/makerspace-backend/package.json
+++ b/makerspace-backend/package.json
@@ -12,6 +12,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/react": "^19.2.7",
     "typescript": "~5.9.3",
     "vite": "^7.2.2"
@@ -22,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.3",
     "nodemon": "^3.1.11",
     "react": "^19.2.0",
     "tsx": "^4.20.6"
