Stop tracking config.json

--- a/makerspace-backend/src/config.sample.json
+++ b/makerspace-backend/src/config.sample.json
@@ -1,4 +1,4 @@
 {
-  "VITE_SUPABASE_URL": "https://csfdcgllpyjpkjqnrxik.supabase.co",
+  "VITE_SUPABASE_URL": "<Supabase URL>",
   "VITE_SUPABASE_PUBLISHABLE_KEY": "<Publishable key>"
 }
